# cookiecutter-python

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_id}}/: .envrc  .gitignore  README.md  config.nix  configlib.nix  dagger.cue  flake.nix  pyproject.toml
{{cookiecutter.project_id}}/cue.mod/: .gitignore  module.cue
{{cookiecutter.project_id}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  configure.py
