[tool.poetry]
name = "{{cookiecutter.project_id}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name.replace('\"', '\\\"')}} <{{ cookiecutter.email }}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

# {% if cookiecutter.has_http == "y" %}
# HTTP
httpx = "^0.23.0"
# {% endif %}

# {% if cookiecutter.has_cli == cookiecutter.has_trio == "y" %}
# CLI
asyncclick = "^8.1.3.4"
# {% elif cookiecutter.has_cli  == "y" %}
click = "^8.1.3"
# {% endif %}

# {% if cookiecutter.has_trio == "y" %}
# Trio
trio = "^0.22.0"
anyio = "^3.6.2"
async-cache = "^1.1.1"
# {% endif %}

# {% if cookiecutter.has_time == "y" %}
# Time
pendulum = "^2.1.2"
# {% endif %}

# Logging
structlog = "^22.1.0" # logging library at https://www.structlog.org/en/stable/getting-started.html
rich = "^12.6.0"  # UX improvement for structlog

# {% if cookiecutter.has_cli == "y" %}
# CLI
[tool.poetry.scripts]
"{{cookiecutter.project_id}}" = '{{cookiecutter.project_slug}}.cli:main'
# {% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
