[tool.poetry]
name = "{{cookiecutter.project_id}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name.replace('\"', '\\\"')}} <{{ cookiecutter.email }}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

# {% if cookiecutter.has_http == "y" %}
# HTTP
httpx = "^0.25.0"
# {% endif %}

# {% if cookiecutter.has_cli == cookiecutter.has_trio == "y" %}
# CLI
asyncclick = "^8.1.3.4"
# {% elif cookiecutter.has_cli  == "y" %}
click = "^8.1.7"
# {% endif %}

# {% if cookiecutter.has_scripting  == "y" %}
# Scripting
pypyp = "^1.1.0"
shshsh = "^1.0.5"
pipetools = "^1.1.0"
# {% endif %}

# {% if cookiecutter.has_trio == "y" %}
# Trio
trio = "^0.22.2"
anyio = "^4.0.0"
async-cache = "^1.1.1"
# {% endif %}

# {% if cookiecutter.has_time == "y" %}
# Time
pendulum = "^2.1.2"
# {% endif %}

# Logging
structlog = "^23.1.0" # logging library at https://www.structlog.org/en/stable/getting-started.html
rich = "^13.5.3"  # UX improvement for structlog"
colorama = "^0.4.6"

# {% if cookiecutter.has_cli == "y" %}
# CLI
[tool.poetry.scripts]
"{{cookiecutter.project_id}}" = '{{cookiecutter.project_slug}}.cli:main'
# {% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
